--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.12.4",
     "mocha": "^5.0.0",
     "morgan": "^1.9.0",
+    "mongoose": "^4.7.2",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
